# depot-device-server

./: Dockerfile  Readme.md  access.py  config.py  config.yaml  develop.ps1  mock_access.py  pyproject.toml  requirements.txt  run.py  server.py
api/: bay_api.py  card_api.py
device_server/: config.yaml
device_server/api/: __init__.py  auth.py  bay.py
device_server/bay/: controller.py  station.py
device_server/card/: reader.py
device_server/config/: config.py
device_server/model/: __init__.py  auth.py  bay.py
tests/: test_all.py  test_api.py  test_bays.py  test_card_auth.py  test_config.py
