[tool.poetry]
name = "depot-server"
version = "0.1.0"
description = ""
authors = ["Lukas Voegtle <lukas@infornautik.de>"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1"
fastapi = "^0"
motor = "^2"
oyaml = "^0"
authlib = "^0"
pytz = "^2020"
uvicorn = "^0"
httpx = "^0"
nxppy = {version = "^1.6.0", platform = "linux"}


[tool.poetry.dev-dependencies]
pytest = "^5"
pytest-mypy = "^0"
pytest-flake8 = "^1"
requests = "^2"
mongomock = "^3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
